# MemoryNode

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md  RELEASING.md  SECURITY.md  TROUBLESHOOTING.md
.github/: RELEASING.md
.github/workflows/: sdk-ci.yml  sdk-release.yml
backend/: requirements.txt
backend/app/: __init__.py  db.py  integrity.py  main.py  migrations.py  model_settings.py  models.py  qwen.py  schemas.py  services.py
backend/tests/: test_data_reliability.py  test_mcp_capabilities.py  test_memory_lifecycle.py  test_model_settings.py
deploy/alibaba-cloud/: README.md  ecs-bootstrap.sh  memorynode-api.service  memorynode-console.service  nginx-memorynode.conf  verify-runtime.sh
docs/: architecture.md  demo-script.md  development-flow.md  mvp-development-plan.md  mvp-requirements.md
docs/task-cards/: conflict-aware-review-execution-prompt.md  conflict-aware-review.md  memory-expiration-execution-prompt.md  memory-expiration.md
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: layout.jsx
portal/: README.md  index.html  package-lock.json  package.json
scripts/: build_release.py  check_release_version.py  smoke_release.py
sdk/python/: README.md  pyproject.toml
sdk/python/src/memorynode/: __init__.py  __main__.py  cli.py  client.py  config.py  console.py  data.py  errors.py  mcp_server.py  models.py  processes.py
sdk/python/tests/: test_cli.py  test_client.py  test_config.py  test_console.py  test_contract.py  test_data.py  test_integration.py  test_mcp_http.py  test_mcp_server.py  test_processes.py
(+41 files in other folders)
