[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memorynode"
version = "0.1.0"
description = "Python HTTP client and stdio MCP server for MemoryNode"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27,<1",
  "mcp>=1.28.1,<2",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<10",
  "uvicorn>=0.30,<1",
]

[project.scripts]
memorynode-mcp = "memorynode.mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/memorynode"]
