[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memorynode"
version = "0.4.1"
description = "Python HTTP client and stdio MCP server for MemoryNode"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27,<1",
  "mcp>=1.28.1,<2",
  "pydantic>=2.11,<3",
  "fastapi>=0.115,<1",
  "platformdirs>=4,<5",
  "psutil>=6,<8",
  "python-dotenv>=1,<2",
  "sqlalchemy>=1.4,<3",
  "uvicorn>=0.30,<1",
  "tomli>=2,<3; python_version < '3.11'",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<10",
  "fastapi>=0.115,<1",
  "sqlalchemy>=1.4,<3",
  "python-dotenv>=1,<2",
  "uvicorn>=0.30,<1",
  "build>=1,<2",
]

[project.scripts]
memorynode = "memorynode.cli:main"
memorynode-mcp = "memorynode.mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/memorynode"]
